WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310339
Conversion to standardized transform is wrong in immersive presentation
https://bugs.webkit.org/show_bug.cgi?id=310339
Summary
Conversion to standardized transform is wrong in immersive presentation
Jean Haberer
Reported
2026-03-20 02:42:19 PDT
In immersive presentation, the model is displayed in world coordinates, where 1m is 1 real world meter.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-20 02:42:27 PDT
<
rdar://problem/172989257
>
Jean Haberer
Comment 2
2026-03-20 02:44:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60991
EWS
Comment 3
2026-03-20 07:10:06 PDT
Committed
309616@main
(88c528a28296): <
https://commits.webkit.org/309616@main
> Reviewed commits have been landed. Closing PR #60991 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug