Conversion to standardized transform is wrong in immersive presentation https://bugs.webkit.org/show_bug.cgi?id=310339 rdar://172989257

Reviewed by Etienne Segonzac.

When presenting a model as immersive, this one is displayed outside of
the page context in a real wold coordinate system. Thus we should not
apply any conversion to entity transforms when the model is immersive.

* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.h:
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::ModelProcessModelPlayerProxy::modelStandardizedTransformSRT):
(WebKit::ModelProcessModelPlayerProxy::modelLocalizedTransformSRT):
(WebKit::modelStandardizedTransformSRT): Deleted.
(WebKit::modelLocalizedTransformSRT): Deleted.

Canonical link: https://commits.webkit.org/309616@main